--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
                                     <div class="product">
                                         <a href="pages/best/bestTwo.html">
-                                            <img src="images/img/Chanel3.1cart.JPG" alt="Chanel">
+                                            <img src="images/img/Chanel3.1cart.jpg" alt="Chanel">
                                         </a>
                                         <div class="product-details">
                                             <h2 class="product-name">Chanel black <span>Арт.C128</span></h2>
