--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
                     <a href="">Про нас</a>
                 </li>
                 <li>
-                    <a href="/pages/delivery.html">Доставка і оплата</a>
+                    <a href="https://raw.githubusercontent.com/LomyaraMax/LunettaShop/refs/heads/main/pages/delivery.html">Доставка і оплата</a>
                 </li>
                 <li>
                     <a href="/pages/contact.html">Контакти</a>
@@ -22,5 +22,6 @@
                 </li>
             </ul>
         </nav>
+
 
 </footer>
