--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
                     <a href="">Про нас</a>
                 </li>
                 <li>
-                    <a href="https://raw.githubusercontent.com/LomyaraMax/LunettaShop/refs/heads/main/pages/delivery.html">Доставка і оплата</a>
+                    <a href="https://github.com/LomyaraMax/LunettaShop/pages/delivery.html">Доставка і оплата</a>
                 </li>
                 <li>
                     <a href="/pages/contact.html">Контакти</a>
@@ -25,3 +25,4 @@
 
 
 </footer>
+
