--- a/index.html
+++ b/index.html
@@ -407,10 +407,10 @@
                     <a href="">Про нас</a>
                 </li>
                 <li>
-                    <a href="/pages/delivery.html">Доставка і оплата</a>
+                    <a href="pages/delivery.html">Доставка і оплата</a>
                 </li>
                 <li>
-                    <a href="/pages/contact.html">Контакти</a>
+                    <a href="pages/contact.html">Контакти</a>
                 </li>
                 <li>
                     <a href="">lomyaramax@gmail.com</a>
