--- a/pages/last/twoLast.html
+++ b/pages/last/twoLast.html
@@ -64,13 +64,13 @@
                             <img id="mainPhoto" src="../../images/img/Chanel1.1.JPG" alt="Main Image">
                         </div>
                         <div class="thumbnails">
-                            <img src="../../images/img/Chanel1.1.jpg" alt="Thumb 1" class="thumb active">
-                            <img src="../../images/img/Chanel1.2.jpg" alt="Thumb 3" class="thumb">
-                            <img src="../../images/img/Chanel1.3.jpg" alt="Thumb 3" class="thumb">
-                            <img src="../../images/img/Chanel1.4.jpg" alt="Thumb 3" class="thumb">
-                            <img src="../../images/img/Chanel1.5.jpg" alt="Thumb 3" class="thumb">
-                            <img src="../../images/img/Chanel1.6.jpg" alt="Thumb 3" class="thumb">
-                            <img src="../../images/img/Chanel1.7.jpg" alt="Thumb 3" class="thumb">
+                            <img src="../../images/img/Chanel1.1.JPG" alt="Thumb 1" class="thumb active">
+                            <img src="../../images/img/Chanel1.2.JPG" alt="Thumb 3" class="thumb">
+                            <img src="../../images/img/Chanel1.3.JPG" alt="Thumb 3" class="thumb">
+                            <img src="../../images/img/Chanel1.4.JPG" alt="Thumb 3" class="thumb">
+                            <img src="../../images/img/Chanel1.5.JPG" alt="Thumb 3" class="thumb">
+                            <img src="../../images/img/Chanel1.6.JPG" alt="Thumb 3" class="thumb">
+                            <img src="../../images/img/Chanel1.7.JPG" alt="Thumb 3" class="thumb">
                         </div>
                     </div>
                     <div class="text">
