--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
             <ul>
                 <li><a href="https://lomyaramax.github.io/LunettaShop/index.html">Головна</a></li>
                 <li><a href="https://lomyaramax.github.io/LunettaShop/pages/contact.html">Контакти</a></li>
-                <li><a class="backet" href="#"><svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.75 6.5L4.5 1.5H19.5L23.25 6.5M0.75 6.5V24C0.75 24.663 1.01339 25.2989 1.48223 25.7678C1.95107 26.2366 2.58696 26.5 3.25 26.5H20.75C21.413 26.5 22.0489 26.2366 22.5178 25.7678C22.9866 25.2989 23.25 24.663 23.25 24V6.5M0.75 6.5H23.25M17 11.5C17 12.8261 16.4732 14.0979 15.5355 15.0355C14.5979 15.9732 13.3261 16.5 12 16.5C10.6739 16.5 9.40215 15.9732 8.46447 15.0355C7.52678 14.0979 7 12.8261 7 11.5" stroke="#444444" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                </a></li>
+                <li>
+                    <a class="backet" href="#">
+                        <svg width="24" height="28" viewBox="0 0 24 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.75 6.5L4.5 1.5H19.5L23.25 6.5M0.75 6.5V24C0.75 24.663 1.01339 25.2989 1.48223 25.7678C1.95107 26.2366 2.58696 26.5 3.25 26.5H20.75C21.413 26.5 22.0489 26.2366 22.5178 25.7678C22.9866 25.2989 23.25 24.663 23.25 24V6.5M0.75 6.5H23.25M17 11.5C17 12.8261 16.4732 14.0979 15.5355 15.0355C14.5979 15.9732 13.3261 16.5 12 16.5C10.6739 16.5 9.40215 15.9732 8.46447 15.0355C7.52678 14.0979 7 12.8261 7 11.5" stroke="#444444" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <span class="cart-count">0</span>
+                    </a>
+                </li>
             </ul>  
 
         </nav>
@@ -143,7 +147,7 @@
                                 </div>
 
                                 <div class="product">
-                                    <a href="pages/last/last_H107.html">
+                                    <a href="pages/last/last_Y132.html">
                                         <img src="images/img/H107Cart.jpg" alt="MIU MIU">
                                     </a>
                                     <div class="product-details">
@@ -211,17 +215,6 @@
                                         <div class="product-details">
                                             <h2 class="product-name">YSL<span>Арт.Y132</span></h2>
                                             <div class="price" data-price="3799">3799 грн</div>
-                                            <button class="add-to-cart">У КОШИК</button>
-                                        </div>
-                                    </div>
-
-                                    <div class="product">
-                                        <a href="pages/best/bestFour.html">
-                                            <img src="images/img/YSL2.1Cart.jpg" alt="Chanel">
-                                        </a>
-                                        <div class="product-details">
-                                            <h2 class="product-name">Chanel<span>Арт.C394</span></h2>
-                                            <div class="price" data-price="3899">3899 грн</div>
                                             <button class="add-to-cart">У КОШИК</button>
                                         </div>
                                     </div>
@@ -404,13 +397,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">Про нас</a>
+                    <a href="#">Про нас</a>
                 </li>
                 <li>
-                    <a href="pages/delivery.html">Доставка і оплата</a>
+                    <a href="https://lomyaramax.github.io/LunettaShop/pages/delivery.html">Доставка і оплата</a>
                 </li>
                 <li>
-                    <a href="pages/contact.html">Контакти</a>
+                    <a href="https://lomyaramax.github.io/LunettaShop/pages/contact.html">Контакти</a>
                 </li>
                 <li>
                     <a href="">lomyaramax@gmail.com</a>
